.extras/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankkonto-app
  namespace: bankkonto-namespace
spec:
  replicas: 2 # Anzahl der Pods, die du haben möchtest
  selector:
    matchLabels:
      app: bankkonto-app # Label zur Auswahl der Pods
  template:
    metadata:
      labels:
        app: bankkonto-app
    spec:
      containers:
        - name: bankkonto-app
          image: calebscript/bankkonto-verwalter:2024.10.1
          ports:
            - containerPort: 3000
