.extras/kubernetes/keycloak-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: bankkonto-namespace
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8880
      targetPort: 8080
    - name: https
      port: 8843
      targetPort: 8443
  type: LoadBalancer  # Set to NodePort if LoadBalancer is unavailable
