.extras/kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bankkonto-namespace
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
