.extras/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankkonto-service
  namespace: bankkonto-namespace
spec:
  selector:
    app: bankkonto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
