.extras/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankkonto-ingress
  namespace: bankkonto-namespace
spec:
  ingressClassName: ngrok
  rules:
  - host: informed-javelin-gradually.ngrok-free.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankkonto-service
            port:
              number: 3000
